--- a/style.css
+++ b/style.css
@@ -303,6 +303,7 @@ footer {
     font-size: 20px;
     margin-bottom: 10px;
     color:white;
+    align-items: center;
 }
 
 .footer-section ul {
@@ -360,6 +361,8 @@ footer {
     align-items: center;
     justify-content: center;
     margin-left:28%;
+    color: white;
+    font-weight: 700;
 }
 /* footer styling end here */
 
